Рефакторинг + бенчмарк